--- a/Aplicacion/Vista/componentes/contenido.phtml
+++ b/Aplicacion/Vista/componentes/contenido.phtml
@@ -48,7 +48,7 @@
 					<div class="clearfix"></div>
 				</div>
 				<div class="x_content">
-					<form id="form-content" class="form-horizontal form-label-left">
+					<form id="form-content" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post" autocomplete="off">
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="idproduct">Producto <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
