--- a/Aplicacion/Vista/componentes/usuario.phtml
+++ b/Aplicacion/Vista/componentes/usuario.phtml
@@ -49,6 +49,7 @@
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="user-id">Id</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="user-id" name="user-id" placeholder="iduser" class="form-control col-md-7 col-xs-12">
+								<input type="text" id="user-name-bck" name="user-name-bck" placeholder="nameuser" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 
@@ -134,6 +135,7 @@
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="user-idtype">Id</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="user-idtype" name="user-idtype" placeholder="idtypeuser" class="form-control col-md-7 col-xs-12">
+								<input type="text" id="description-type-bck" name="description-type-bck" placeholder="description_type" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 
