--- a/Aplicacion/Vista/pag_errores/error_404.phtml
+++ b/Aplicacion/Vista/pag_errores/error_404.phtml
@@ -13,7 +13,7 @@
     <base href="<?php echo HTTP_HOST; ?>"/>
 
     <title>Retail Custom Solutions</title>
-
+    <link rel="shortcut icon" href="http://www.retailcs.com/es/public/img/favicon.ico">
     <!-- Bootstrap -->
     <link href="./Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./Static/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -35,8 +35,16 @@
 					<div class="text-center text-center">
 						<h1 class="error-number">404</h1>
 						<h2>Lo sentimos pero no hemos podido encontrar esta página</h2>
-						<p>Esta página que estás buscando no existe <a href="#">¿Informar de esto?</a></p>
+						<p>Esta página que estás buscando no existe.</p>
 						<div class="mid_center">
+							<p>
+								<a href="#">
+									<img src="./Static/images/pagehome.png" alt="Retail Custom Solution - Extranet" width="96px">
+									<br><br>
+									Ir a la página principal!
+								</a>
+							</p>
+							<!--	
 							<h3>Buscar</h3>
 							<form>
 								<div class="col-xs-12 form-group pull-right top_search">
@@ -48,6 +56,7 @@
 									</div>
 								</div>
 							</form>
+							-->
 						</div>
 					</div>
 				</div>
