--- a/Aplicacion/Vista/componentes/archivo.phtml
+++ b/Aplicacion/Vista/componentes/archivo.phtml
@@ -48,7 +48,7 @@
 					<div class="clearfix"></div>
 				</div>
 				<div class="x_content">
-					<form id="form-file" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post">
+					<form id="form-file" class="form-horizontal form-label-left" enctype="multipart/form-data" method="post" autocomplete="off">
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="idproduct">Producto <span class="required">*</span></label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
@@ -83,7 +83,7 @@
 									<input type="radio" class="flat upload-file" name="gender" id="id-url" value="url" /> Desde URL
 								</label>
 							</div>
-						</div>						
+						</div>
 						<div class="form-group">
 							<!--<label class="control-label col-md-3 col-sm-3 col-xs-12" for="file-upload">Cargar Archivo <span class="required">*</span></label>-->
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="file-upload">&nbsp;</label>
@@ -95,7 +95,7 @@
 							<!--<label class="control-label col-md-3 col-sm-3 col-xs-12" for="file-url">Desde URL <span class="required">*</span></label>-->
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="file-url">&nbsp;</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="file-url" name="file-url" class="form-control">
+								<input type="text" id="file-url" name="file-url" class="form-control url">
 							</div>
 						</div>
 						<div class="form-group">
