--- a/Aplicacion/Vista/componentes/empresa.phtml
+++ b/Aplicacion/Vista/componentes/empresa.phtml
@@ -60,15 +60,15 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="ruc">Ruc</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="ruc" name="ruc" placeholder="ej. fcabezasr" class="form-control col-md-7 col-xs-12">
+								<input type="text" id="ruc" name="ruc" placeholder="ej. 20518880901" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
-						<div class="form-group">
+						<!--<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="address">Dirección</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="text" id="address" name="address" placeholder="" class="form-control col-md-7 col-xs-12">
 							</div>
-						</div>
+						</div>-->
 						<div class="ln_solid"></div>
 						<div class="form-group">
 							<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
