--- a/Aplicacion/Vista/componentes/login.phtml
+++ b/Aplicacion/Vista/componentes/login.phtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Retail Custom Solutions</title>
-
+    <link rel="shortcut icon" href="http://www.retailcs.com/es/public/img/favicon.ico">
     <!-- Bootstrap -->
     <link href="../Static/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
